<resources>
    // Expense
    <string name="app_name">DebtDecoder</string>
    <string name="bot_nav_dashboard">Dashboard</string>
    <string name="bot_nav_budget">Income</string>
    <string name="bot_nav_expenses">Expenses</string>
    <string name="bot_nav_debt">Debt</string>
    <string name="bot_nav_more">More</string>
    <string name="module_title">%s</string>
    <string name="add_expense_title">Add an Expense</string>
    <string name="add_expense_payment_name">Payment Method</string>
    <string name="hello_blank_fragment">temporary text holder</string>
    <string name="default_expense_category_name">Restaurant</string>
    <string name="expenses_for_date">Expenses for %1$s</string>
    <string name="total_expense">Total: RM%1$.2f</string>
    <string name="expense_timeline_title">Past Week Spendings</string>
    <string name="category_icon">Category Icon For expense</string>
    <string name="line_chart_monthly_expenses_title">Monthly Expense Comparison: Current vs Previous Month</string>
    <string name="preference2_btn">Finish</string>

    //Debt
    <string name="loan_details_title">Loan Details</string>
    <string name="category">CATEGORY</string>
    <string name="creditor">CREDITOR</string>
    <string name="enter_loan_name">Enter Loan Name</string>
    <string name="amount">AMOUNT</string>
    <string name="enter_loan_amount">Enter Loan Amount</string>
    <string name="enter_interest_amount">Enter Interest Amount</string>
    <string name="maturity">MATURITY</string>
    <string name="interest">INTEREST</string>
    <string name="loan_name">LOAN NAME</string>
    <string name="enter_maturity_date">Enter Maturity Date</string>
    <string name="lend">LEND</string>
    <string name="borrow">BORROW</string>
    <string name="strategy_advice">Debt Repayment Strategies:</string>
    <string name="enter_creditor_name">Enter Creditor Name</string>
    <string name="to_pay_debts">To Pay Debts :</string>
    <string name="to_pay_overview">To Pay Overview :</string>
    <string name="to_receive_overview">To Receive Overview:</string>
    <string name="to_receive_debts">To Receive Debts:</string>
    <string name="summary">Summary:</string>
    <string name="all_your_debts">All Your Debts:</string>
    <string-array name="category_types">
        <item>Personal Loan</item>
        <item>Car Loan</item>
        <item>Student Loan</item>
        <item>House Loan</item>
        <item>Others</item>
    </string-array>

    <string-array name="loan_options">
        <item>Loan from Robert</item>
        <item>Car Loan</item>
        <item>Home Mortgage</item>
    </string-array>

    <string-array name="module_titles">
        <item>DASHBOARD</item>
        <item>DEBT</item>
        <item>INCOME</item>
        <item>EXPENSES</item>
        <item>MORE</item>
        <item>FINANCIAL ADVICE</item>
        <item>MY ACCOUNT</item>
    </string-array>

    <string-array name="add_expense_recurrent">
        <item>Week</item>
        <item>Month</item>
    </string-array>

    <string-array name="add_expense_payment_method">
        <item>Cash</item>
        <item>E Wallet</item>
        <item>Credit/Debit Card</item>
        <item>Online Banking</item>
    </string-array>

     //Advice
    <string name="video">Videos</string>
    <string name="article">Articles</string>
    <string name="podcast">Podcasts</string>
    <string name="quiz">Quiz</string>
    <string name="advice">Financial Advices</string>
    <string name="next_question">Next Question</string>
    <string name="see_result">See Result</string>
</resources>